# OIA-chatbot-RAG-refactor

./: .gitignore  Pipfile  README.md  asyncdatabase.py  chat_control.py  chinese_data.json  config.py  data_preprocess.py  database.py  docker-compose.yml  dockerfile.backend  docs.py  english_data.json  llm_connector.py  main.py  pyproject.toml  requirements.txt  template_message.py  utils.py
app/routes/: admin_routes.py  error_routes.py  line_bot_routes.py  oauth_routes.py  signup_routes.py
app/services/line_bot_service/: flex.json  handlers.py  message_handler.py  messages.py  postback_handler.py  richmenu.py
app/services/line_bot_service/NormalQA/: new_qa.py  retriver.py
app/services/line_bot_service/NormalQA/faiss_index_chinese/: index.faiss  index.pkl
app/services/line_bot_service/NormalQA/faiss_index_international/: index.faiss
app/services/line_bot_service/NormalQA/faiss_index_oversea_chinese/: index.pkl
app/services/line_bot_service/NormalQA/normal_question_data/: cache_problem_Chinese.csv  cache_problem_English.csv
docretrival_data/Chinese/: NHI.txt  Visa.txt  health_examination.txt  registration_for_otherstudent.txt  registration_process.txt  schoolarship_certificate.txt
docretrival_data/English/: Scholarship.txt  Visa.txt  enrollment_deferral.txt  health_examination.txt  registration_for_foreignstudent.txt
mysql/: databse_students.sql  dockerfile.db
static/: OIA.js
templates/: OIA國際處操作表單.html  error.html  fill_form_non_student.html  index copy.html  index.html  start.html
templates/assets/: index-B7yvV74_.css  index-DiNSt73Z.js
(+8 files in other folders)
